--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,6 @@
   <p>StudentApp does not collect, store, or share your personal data beyond what is required to access Google services you choose to connect.
      We use OAuth 2.0 to authorize access to Google Classroom and user profile data.</p>
   <p>Your data is used only within the app and is not transmitted to third-party services.</p>
-  <p>If you have questions, contact: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+  <p>If you have questions, contact: <a href="mailto:romanq2006@gmail.com">me on email</a></p>
 </body>
 </html>
